# home-sync

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml
src/: config.rs  dotfiles.rs  main.rs  scoop.rs
